backport of version 3