@@ -24,11 +24,11 @@ import games.alejandrocoria.mapfrontiers.common.territory.frontier.FrontierChang
 import games.alejandrocoria.mapfrontiers.common.territory.frontier.FrontierShape;
 import games.alejandrocoria.mapfrontiers.common.territory.frontier.FrontierVisibility;
 import journeymap.api.v2.client.IClientAPI;
-import journeymap.api.v2.client.display.Context;
 import journeymap.api.v2.client.fullscreen.IThemeButton;
 import journeymap.api.v2.client.fullscreen.ModPopupMenu;
 import journeymap.api.v2.client.fullscreen.ThemeButtonDisplay;
 import journeymap.api.v2.client.util.UIState;
+import journeymap.api.v2.common.Context;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.resources.language.I18n;
 import net.minecraft.core.BlockPos;
@@ -157,14 +157,14 @@ public class FullscreenMap {
         }
 
         String path = "textures/gui/journeymap/";
-        buttonFrontiers = buttonDisplay.addThemeButton(I18n.get("mapfrontiers.button_mapfrontiers"), ResourceLocation.fromNamespaceAndPath(MapFrontiers.MODID, path + "mapfrontiers.png"), b -> buttonFrontiersPressed());
-        buttonNew = buttonDisplay.addThemeButton(I18n.get("mapfrontiers.button_new_frontier"), ResourceLocation.fromNamespaceAndPath(MapFrontiers.MODID, path + "new_frontier.png"), b -> buttonNewPressed(mc.player.blockPosition()));
-        buttonInfo = buttonDisplay.addThemeButton(I18n.get("mapfrontiers.button_frontier_info"), ResourceLocation.fromNamespaceAndPath(MapFrontiers.MODID, path + "info_frontier.png"), b -> buttonInfoPressed());
+        buttonFrontiers = buttonDisplay.addThemeButton(I18n.get("mapfrontiers.button_mapfrontiers"), new ResourceLocation(MapFrontiers.MODID, path + "mapfrontiers.png"), b -> buttonFrontiersPressed());
+        buttonNew = buttonDisplay.addThemeButton(I18n.get("mapfrontiers.button_new_frontier"), new ResourceLocation(MapFrontiers.MODID, path + "new_frontier.png"), b -> buttonNewPressed(mc.player.blockPosition()));
+        buttonInfo = buttonDisplay.addThemeButton(I18n.get("mapfrontiers.button_frontier_info"), new ResourceLocation(MapFrontiers.MODID, path + "info_frontier.png"), b -> buttonInfoPressed());
         buttonEdit = buttonDisplay.addThemeToggleButton(I18n.get("mapfrontiers.button_done_editing"), I18n.get("mapfrontiers.button_edit_frontier"),
-                ResourceLocation.fromNamespaceAndPath(MapFrontiers.MODID, path + "edit_frontier.png"), editing, b -> buttonEditToggled());
+                new ResourceLocation(MapFrontiers.MODID, path + "edit_frontier.png"), editing, b -> buttonEditToggled());
         buttonVisible = buttonDisplay.addThemeToggleButton(I18n.get("mapfrontiers.button_hide_frontier"), I18n.get("mapfrontiers.button_show_frontier"),
-                ResourceLocation.fromNamespaceAndPath(MapFrontiers.MODID, path + "visible_frontier.png"), false, b -> buttonVisibleToggled());
-        buttonDelete = buttonDisplay.addThemeButton(I18n.get("mapfrontiers.button_delete_frontier"), ResourceLocation.fromNamespaceAndPath(MapFrontiers.MODID, path + "delete_frontier.png"), b -> buttonDelete());
+                new ResourceLocation(MapFrontiers.MODID, path + "visible_frontier.png"), false, b -> buttonVisibleToggled());
+        buttonDelete = buttonDisplay.addThemeButton(I18n.get("mapfrontiers.button_delete_frontier"), new ResourceLocation(MapFrontiers.MODID, path + "delete_frontier.png"), b -> buttonDelete());
 
         updateButtons();
     }
@@ -648,7 +648,7 @@ public class FullscreenMap {
             clearSelection();
             updateButtons();
         } else if (candidates.size() == 1 || getCurrentSelectionCandidate() == null) {
-            selectCandidate(candidates.getFirst());
+            selectCandidate(candidates.get(0));
         } else {
             int i = indexOfCurrentSelection(candidates);
             i = (i + 1) % candidates.size();
